[package]
name = "impersonated-webconnect"
version = "0.1.0"
description = "Impersonated-Webconnect is a package that allows you to build TCP/WSS connection with impersonation as chrome."
authors = ["YT-Gh0st"]
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
tokio = { version = "1", features = ["full"] }
reqwest-impersonate = { version = "0.11", features = ["websocket"] }
tungstenite = "0.23.0"
futures-util = "0.3.30"
